--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/lodash": "^4.14.170",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
+    "copy-webpack-plugin": "^9.0.1",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.42.1",
@@ -22,6 +23,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "hello-typescript-package": "file:../hello-typescript-package",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
